Replaced Thread::getId() with Thread::threadId()
-> Thread::getId() is deprecated since Java 19, Hence replaced
Thread::getId() with Thread::threadId() in the repository as mentioned
in #18205

Signed-off-by: hsanirudh <hsanirudh@gmail.com>